--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -247,25 +247,6 @@
           </property>
          </spacer>
         </item>
-        <item row="10" column="1">
-         <widget class="QPushButton" name="readButton">
-          <property name="minimumSize">
-           <size>
-            <width>150</width>
-            <height>0</height>
-           </size>
-          </property>
-          <property name="maximumSize">
-           <size>
-            <width>150</width>
-            <height>16777215</height>
-           </size>
-          </property>
-          <property name="text">
-           <string>Read Image</string>
-          </property>
-         </widget>
-        </item>
         <item row="11" column="1">
          <spacer name="verticalSpacer">
           <property name="orientation">
@@ -333,6 +314,25 @@
            </widget>
           </item>
          </layout>
+        </item>
+        <item row="10" column="1">
+         <widget class="QPushButton" name="readButton">
+          <property name="minimumSize">
+           <size>
+            <width>150</width>
+            <height>0</height>
+           </size>
+          </property>
+          <property name="maximumSize">
+           <size>
+            <width>150</width>
+            <height>16777215</height>
+           </size>
+          </property>
+          <property name="text">
+           <string>Read Image</string>
+          </property>
+         </widget>
         </item>
        </layout>
       </item>
@@ -589,6 +589,9 @@ selection-background-color: rgb(170, 0, 0);</string>
   <action name="actionRead_Image">
    <property name="text">
     <string>Read Image</string>
+   </property>
+   <property name="shortcut">
+    <string>Ctrl+R</string>
    </property>
   </action>
  </widget>
